// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.THead allowTags=undefined 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead checkGrammar=false 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead checkGrammar=true 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead checkHighlight=false 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead checkHighlight=true 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead checkSpaces=false 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead checkSpaces=true 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead className="my-classname" 1`] = `
<thead
  className="uu5-bricks-table-thead my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead className="test-classname" 1`] = `
<thead
  className="uu5-bricks-table-thead test-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="brown" 1`] = `
<thead
  className="color-schema-brown uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="brown-rich" 1`] = `
<thead
  className="color-schema-brown-rich uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="cyan" 1`] = `
<thead
  className="color-schema-cyan uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="cyan-rich" 1`] = `
<thead
  className="color-schema-cyan-rich uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="default" 1`] = `
<thead
  className="color-schema-default uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="green" 1`] = `
<thead
  className="color-schema-green uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="green-rich" 1`] = `
<thead
  className="color-schema-green-rich uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="grey" 1`] = `
<thead
  className="color-schema-grey uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="grey-rich" 1`] = `
<thead
  className="color-schema-grey-rich uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="orange" 1`] = `
<thead
  className="color-schema-orange uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="orange-rich" 1`] = `
<thead
  className="color-schema-orange-rich uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="pink" 1`] = `
<thead
  className="color-schema-pink uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="pink-rich" 1`] = `
<thead
  className="color-schema-pink-rich uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="purple" 1`] = `
<thead
  className="color-schema-purple uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="purple-rich" 1`] = `
<thead
  className="color-schema-purple-rich uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="red" 1`] = `
<thead
  className="color-schema-red uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="red-rich" 1`] = `
<thead
  className="color-schema-red-rich uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="yellow" 1`] = `
<thead
  className="color-schema-yellow uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead colorSchema="yellow-rich" 1`] = `
<thead
  className="color-schema-yellow-rich uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead content="This is Content from ContentMixin" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead content=12345 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead controlled=false 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead controlled=true 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead default props 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead disabled=false 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead disabled=false 3`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead disabled=true 1`] = `
<thead
  className="uu5-bricks-table-thead uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</thead>
`;

exports[`UU5.Bricks.Table.THead disabled=true 3`] = `
<thead
  className="uu5-bricks-table-thead uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</thead>
`;

exports[`UU5.Bricks.Table.THead dynamic=false 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead dynamic=true 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead fullTextSearchPriority=0 1`] = `
<thead
  className="uu5-bricks-table-thead uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead hidden=false 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead hidden=false 3`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead hidden=true 1`] = `
<thead
  className="uu5-bricks-table-thead uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead hidden=true 3`] = `
<thead
  className="uu5-bricks-table-thead uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead id="myId" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead id="test-id" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="test-id"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead ignoreHTML=false 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead ignoreHTML=true 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead mainAttrs=undefined 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead name="myName" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead nestingLevel="bigBox" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead nestingLevel="bigBoxCollection" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead nestingLevel="box" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead nestingLevel="box" 3`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead nestingLevel="boxCollection" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead nestingLevel="container" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Table.THead nestingLevel="inline" 3`] = `""`;

exports[`UU5.Bricks.Table.THead nestingLevel="page" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead nestingLevel="smallBox" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead nestingLevel="smallBoxCollection" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead nestingLevel="spa" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead noIndex=false 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead noIndex=true 1`] = `
<thead
  className="uu5-bricks-table-thead uu5-noindex uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead noPrint=false 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead noPrint=true 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead props.allowTags example 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Header
    content="Table"
    id="uuID1-header"
    key="uuID1-header"
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-thead
      allowTags={
        Array [
          "UU5.Example.MyCompButton",
        ]
      }
      colorSchema="danger"
      id="uesID1"
      key="uesID1"
    >
      <table-tr
        id="uesID2"
      >
        <table-th
          content="Name"
          id="uesID3"
        />
        <table-th
          content="Rank"
          id="uesID4"
        />
      </table-tr>
      <UU5.Example.MyCompButton
        content="AllowTags Content"
        id="uesID5"
      />
    </table-thead>
    <table-tbody
      colorSchema="blue"
      id="uuID2"
      key="uuID2"
    >
      <table-tr
        id="uuID3"
      >
        <table-td
          content="Rimmer"
          id="uuID4"
        />
        <table-td
          content="2nd class technician"
          id="uuID5"
        />
        <table-td
          content="comical"
          id="uuID6"
        />
      </table-tr>
    </table-tbody>
    <table-tfoot
      colorSchema="danger"
      id="uuID7"
      key="uuID7"
    >
      <table-tr
        id="uuID8"
      >
        <table-th
          content="Best rank"
          id="uuID9"
        />
        <table-td
          content="1st console officer"
          id="uuID10"
        />
      </table-tr>
    </table-tfoot>
  </table>
  <Footer
    content="Table footer"
    id="uuID1-footer"
    key="uuID1-footer"
  />
</div>
`;

exports[`UU5.Bricks.Table.THead pureRender=false 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead pureRender=true 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead selected=false 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead selected=true 1`] = `
<thead
  className="uu5-bricks-table-thead uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead style="padding:8px; borderRadius: 2px" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead style={"backgroundColor":"red","color":"blue"} 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead style={"margin":8} 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead textCorrector=false 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead textCorrector=true 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.THead tooltip="My Tooltip" 1`] = `
<thead
  className="uu5-bricks-table-thead"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
